Adjust margin-top to ensure item count visibility

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -479,6 +479,11 @@ p.card-text {
     margin-left: 30px;
 }
 
+p.card-textother {
+    margin-left: 30px;
+}
+
+
 .card-title {
     margin-left: 30px;
 }
